Bug 94890 - [drm] GMBUS [i915 gmbus dpb] timed out, falling back to bit banging on pin 5
Summary: [drm] GMBUS [i915 gmbus dpb] timed out, falling back to bit banging on pin 5
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-11 07:16 UTC by FadeMind
Modified: 2017-07-24 22:42 UTC (History)
2 users (show)

See Also:
i915 platform: IVB
i915 features:


Attachments
DMESG-46rc3 (62.29 KB, text/plain)
2016-04-11 07:19 UTC, FadeMind
no flags Details

Description FadeMind 2016-04-11 07:16:35 UTC
Since lastest GIT releses of xf86-video-intel I have two warnings about GMBUS i915 dpb time out.

[    3.963578] [drm] GMBUS [i915 gmbus dpb] timed out, falling back to bit banging on pin 5
[    4.240243] [drm] GMBUS [i915 gmbus dpd] timed out, falling back to bit banging on pin 6


This happened on Linux 4.5 AND Linux 4.6RC3 

GPU: 

00:02.0 VGA compatible controller: Intel Corporation 3rd Gen Core processor Graphics Controller (rev 09) (prog-if 00 [VGA controller])
        Subsystem: ASUSTeK Computer Inc. Device 1447
        Flags: bus master, fast devsel, latency 0, IRQ 25
        Memory at f7400000 (64-bit, non-prefetchable) [size=4M]
        Memory at d0000000 (64-bit, prefetchable) [size=256M]
        I/O ports at f000 [size=64]
        [virtual] Expansion ROM at 000c0000 [disabled] [size=128K]
        Capabilities: [90] MSI: Enable+ Count=1/1 Maskable- 64bit-
        Capabilities: [d0] Power Management version 2
        Capabilities: [a4] PCI Advanced Features
        Kernel driver in use: i915
        Kernel modules: i915
Comment 1 FadeMind 2016-04-11 07:19:43 UTC
Created attachment 122857 [details]
DMESG-46rc3

NOTE: I have 

[ 1.379221] [drm:intel_set_pch_fifo_underrun_reporting [i915]] *ERROR* uncleared pch fifo underrun on pch transcoder A
[ 1.379264] [drm:intel_pch_fifo_underrun_irq_handler [i915]] *ERROR* PCH transcoder A FIFO underrun

too but I just muted them (still available in debug)
Comment 2 Ville Syrjala 2016-04-11 07:29:02 UTC
(In reply to FadeMind from comment #0)
> Since lastest GIT releses of xf86-video-intel I have two warnings about
> GMBUS i915 dpb time out.
> 
> [    3.963578] [drm] GMBUS [i915 gmbus dpb] timed out, falling back to bit
> banging on pin 5
> [    4.240243] [drm] GMBUS [i915 gmbus dpd] timed out, falling back to bit
> banging on pin 6

That's actually perfectly normal, which means we shouldn't spam dmesg with it needlessly. Some time ago I posted a patch to silence this:
https://lists.freedesktop.org/archives/intel-gfx/2016-March/089133.html

Just need to get someone to review it.
Comment 3 Ville Syrjala 2016-04-12 17:57:42 UTC
commit 706778013bc5ee97970de3a2deee80b007e29c25
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Mon Mar 7 17:57:00 2016 +0200

    drm/i915: Make GMBUS timeout message DRM_DEBUG_KMS


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.